--- a/css/post-style.css
+++ b/css/post-style.css
@@ -1,4 +1,19 @@
 
+.login-container, body{
+    background: url("../img/macbook-pro-at-night-picjumbo-com.jpg") no-repeat center center fixed;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    z-index: 1;
+}
 
 /*Card Post*/
 .card{
