--- a/css/post-style.css
+++ b/css/post-style.css
@@ -31,7 +31,8 @@
     width: auto;
     height: 52px;
     border: none;
-    font-size: 20px;
+    font-size: 15px;
+    font-family:'Lato', sans-serif;
     letter-spacing: 5px;
     color: #fff;
     text-transform: uppercase;
