--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,4 +1,14 @@
-
+body{
+    background: url("../img/macbook-pro-at-night-picjumbo-com.jpg") no-repeat center center fixed;
+    width: 100%;
+    min-height: 100vh;
+   
+    padding: 15px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    
+}
 .btn-a{
     display: inline-block;
     width: 100%;
