comentario con carrousel de imagenes

--- a/css/post-style.css
+++ b/css/post-style.css
@@ -1,3 +1,22 @@
+.scroll{
+    height: 550px;
+    overflow-y: scroll;
+}
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* scrollbar track */
+::-webkit-scrollbar-track {
+    background: #eee;
+  }
+  
+  /* scrollbar handle */
+::-webkit-scrollbar-thumb {
+    border-radius: 1rem;
+    background-color: #00d2ff;
+    background-image: linear-gradient(to top, #00d2ff 0%, #3a7bd5 100%);
+  }
 
 .login-container, body{
     background: url("../img/macbook-pro-at-night-picjumbo-com.jpg") no-repeat center center fixed;
@@ -14,6 +33,25 @@
     position: relative;
     z-index: 1;
 }
+/*Columna Izquierda*/
+
+.link-access{
+    color: white;
+    background-image: linear-gradient(-45deg, #e91e63, #00bcd4, #e91e63);
+    border-radius: 50px 50px 50px 50px;
+    transition: all ease 1s;
+    background-size: 400% 400%;
+    background-position: 0 0;
+    margin-bottom: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.link-access:hover{
+    border-radius: 0px 50px 50px 50px;
+    background-position: 100% 50%;
+    color: white;
+}
+
 
 /*Card Post*/
 .card{
@@ -94,3 +132,29 @@
     height: 20px;
 }
 /*Like button animation*/
+
+
+
+
+.heart {
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    background-image:url( 'https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png');
+    background-position: left;
+    background-repeat:no-repeat;
+    background-size:2900%;
+  }
+  
+  .heart:hover {
+    background-position:right;
+  }
+  
+  .is_animating {
+    animation: heart-burst .8s steps(28) 1;
+  }
+  
+  @keyframes heart-burst {
+    from {background-position:left;}
+    to { background-position:right;}
+  }
